--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+LARAVELPASSPORT_CLIENT_ID="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+LARAVELPASSPORT_CLIENT_SECRET=
+LARAVELPASSPORT_REDIRECT_URI=http://localhost/auth/callback
+LARAVELPASSPORT_HOST=https://host.localhost
